--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
 		"agents": "^0.0.95",
 		"hono": "^4.8.2",
 		"jose": "^6.0.11",
+		"mysql2": "^3.12.0",
 		"workers-mcp": "^0.0.13",
 		"zod": "^3.25.67"
 	},
