--- a/package.json
+++ b/package.json
@@ -20,9 +20,9 @@
 		"agents": "^0.0.95",
 		"hono": "^4.8.2",
 		"jose": "^6.0.11",
-		"mysql2": "^3.12.0",
 		"workers-mcp": "^0.0.13",
-		"zod": "^3.25.67"
+		"zod": "^3.25.67",
+		"mysql2": "^3.12.0"
 	},
 	"devDependencies": {
 		"@biomejs/biome": "^2.0.4",
